# libcu

./: .gitignore  README.md  build.cmd  build.sh  publish.ps1
docs/: fixed-assets.md  sentinel.md
docs/file-utils/: dmkdir.md
docs/reference/: crtdefscu.md  ctypecu.md  cuda_runtimecu.md  direntcu.md  errnocu.md  fcntlcu.md  grpcu.md  host_functions.md  pwdcu.md  regexcu.md  sentinel.md  setjmpcu.md  stdargcu.md  stddefcu.md  stdiocu.md  stdlibcu.md  stringcu.md  timecu.md  unistdcu.md
docs/reference/ext/: hash.md  memfile.md
docs/reference/sys/: statcu.md  timecu.md
src/: CMakeLists.txt  CMakeLists.work.txt  fileutils.sln  libcu.sln
src/include/: _dirent.h  _unistd.h  crtdefscu.h  ctypecu.h  cuda_runtimecu.h  direntcu.h  errnocu.h  fcntlcu.h  featurescu.h  grpcu.h  pwdcu.h  regexcu.h  sentinel-direntmsg.h  sentinel-fcntlmsg.h  sentinel-stdiomsg.h  sentinel-stdlibmsg.h  sentinel-timemsg.h  sentinel-unistdmsg.h  sentinel.h  setjmpcu.h  stdargcu.h  stddefcu.h  stdiocu.h  stdlibcu.h  stringcu.h  timecu.h  unistdcu.h
src/include/bits/: libcu_fpmax.h
src/include/ext/: hash.h  memfile.h  pipeline.h
src/include/sys/: statcu.h  timecu.h
src/libcu/: crtdefscu.cu  ctypecu.cu  cuda_runtime.cpp  direntcu.cu  errnocu.cu  fcntlcu.cu  fsystem.cu  fsystem.h  grpcu.cu  libcu.cu  libcu.native.nuspec  libcu.stdlib.cu  libcu.vcxproj  libcu.vcxproj.filters  program.cu  pwdcu.cu  regexcu.cu  sentinel-gpu.cu  sentinel-host.cpp  sentinel-msg.cpp  sentinel.cpp  setjmpcu.cu  stdiocu.cu  stdlibcu.cu  stringcu.cu  timecu.cu  unistdcu.cu
src/libcu.fileutils/: dcat.cu  dcat.cuh  dcat.vcxproj  dcd.cu  dcd.cuh  dcd.vcxproj  dchgrp.cu  dchgrp.cuh  dchgrp.vcxproj  dchmod.cu  dchmod.cuh  dchmod.vcxproj  dchown.cu  dchown.cuh  dchown.vcxproj  dcmp.cu  dcmp.cuh  dcmp.vcxproj  dcp.cu  dcp.cuh  dcp.vcxproj  ddd.cu  dgrep.cu  dgrep.cuh  dgrep.vcxproj  dl.cu  dln.cu  dls.cu  dls.cuh  dls.orig.cu  dls.vcxproj  dmkdir.cu  dmkdir.cuh  dmkdir.vcxproj  dmkfifo.cu  dmore.cu  dmore.cuh  dmore.vcxproj  dmv.cu  dmv.cuh  (+20 more)
src/libcu.tests/: AssemblyInfo.cpp  allTests.cpp  app.aps  crtdefsTest.cu  ctypeTest.cu  direntTest.cu  errnoTest.cu  fcntlTest.cu  fsystemTest.cu  grpTest.cu  libcu.tests.cu  libcu.tests.vcxproj  libcu.tests.vcxproj.filters  program.cu  pwdTest.cu  regexTest.cu  sentinelTest.cu  setjmpTest.cu  stdafx.cpp  stdafx.h  stddefTest.cu  stdioTest.cu  stdlibTest.cu  stringTest.cu  timeTest.cu  unistdTest.cu
src/libcu.tests/ext/: ext_allTests.cpp  ext_hashTest.cu  ext_libcu.tests.cu  ext_memfileTest.cu
src/libcu.tests/sys/: sys_allTests.cpp  sys_libcu.tests.cu  sys_statTest.cu  sys_timeTest.cu
src/libcu/_content/: sample.libcu.cu
src/libcu/ext/: hash.cu  memfile.cu  pipeline.cu
src/libcu/sys/: statcu.cu  timecu.cu
src/tcl/jimtcl/: jimsh.cu  jimtcl.vcxproj  jimtcl.vcxproj.filters  libcu-jimtcl.native.nuspec
src/tcl/jimtcl/tests/: namespace.test
src/tcl/libcu.jimtcl/: glob.tcl  init.cu  jim-aio.cu  jim-array.cu  jim-clock.cu  jim-config.h  jim-eventloop.cu  jim-eventloop.h  jim-exec.cu  jim-file.cu  jim-format.cu  jim-gpu.cu  jim-history.cu  jim-interactive.cu  jim-load.cu  jim-namespace.cu  jim-pack.cu  jim-package.cu  jim-posix.cu  jim-readdir.cu  jim-readline.cu  jim-regexp.cu  jim-sdl.cu  jim-signal.cu  jim-signal.h  jim-sqlite3.cu  jim-subcmd.cu  jim-subcmd.h  jim-syslog.cu  jim-tclprefix.cu  jim-win32compat.cu  jim-win32compat.h  jim.cu  jim.h  jimautoconf.h  jimex.cu  jimex.h  libcu.jimtcl.cu  libcu.jimtcl.native.nuspec  libcu.jimtcl.native.targets  (+4 more)
src/tcl/libcu.jimtcl/_content/: sample.libcu.jimtcl.cu  tclcontext.cu  tclcontext.cu.h
src/tcl/libcu.tinytcl/: dos.cu  libcu.tinytcl.cu  libcu.tinytcl.native.nuspec  libcu.tinytcl.vcxproj  libcu.tinytcl.vcxproj.filters  regex_compat.cu  regex_compat.h  tcl.h  tclAlloc.cu  tclAssem.cu  tclBasic.cu  tclCmdAH.cu  tclCmdIL.cu  tclCmdMZ.cu  tclEx.h  tclExDbg.cu  tclExGen.cu  tclExInt.h  tclExpr.cu  tclGet.cu  tclGlob.cu  tclGpu.h  tclGpuAZ.cu  tclGpuEnv.cu  tclGpuStr.cu  tclGpuUtil.cu  tclHash.cu  tclHash.h  tclHistory.cu  tclInt.h  tclLoad-noop.cu  tclLoad-unix.cu  tclLoad-win.cu  tclLoad.cu  tclLoad.h  tclMod.cu  tclMod.h  tclNoExtensions.cu  tclObj.cu  tclParse.cu  (+3 more)
src/tcl/libcu.tinytcl/_content/: TclContext.cu  TclContext.cu.h  sample.tinytcl.cu
src/tcl/libcu.tinytcl/tcl_sys/: autoinit.tcl
src/tcl/tinytcl/: libcu-tinytcl.native.nuspec  tinySh.cu  tinytcl.vcxproj  tinytcl.vcxproj.filters
src/tcl/tinytcl/tests/: defs  format.test  history.test  if.test  info.test
